[project]
name = "flutter-fastapi-server"
version = "0.1.0"
description = "FastAPI backend for a Flutter app template"
requires-python = ">=3.13"
authors = [
  { name = "Changkyun Kim", email = "comfuture@gmail.com" }
]
dependencies = [
  "fastapi[standard]>=0.138.2,<1.0.0",
  "uvicorn[standard]>=0.49.0,<1.0.0"
]

[tool.uv]
package = false
